# fastapi_journey

./: .gitignore  README.md  brain.md
.opencode/: config.json
To_do/: pyproject.toml  readme.md  test.db  todos.db
To_do/app/: database.py  dependencies.py  main.py  models.py  schemas.py
To_do/app/routes/: auth.py  todo.py
To_do/app/tests/: conftest.py
To_do/tests/: conftest.py  test_todos.py
cached_api/: benchmark.py
cached_api/app/: cache.py  db.py  main.py
cached_api/tests/: test_cache.py
clean-architecture/: README.md
clean-architecture/src/: api.py
inventory_service/: main.py  schema.sql
notification_service/: consumer.py  producer.py  redis_notifier.py  stock_worker.py
prometheus_fastapi/: app.py  docker-compose.yml  fraud_detection.py  fraud_worker.py  kafka_producer.py  nginx.conf  prometheus.yml  test_verify.py
supabase1/: .env  main.py  pyproject.toml
